@@ -19,7 +19,8 @@ OpenLDAP 2.4.22 Engineering
 	Fixed slapo-rwm olcRwmMap handling (ITS#6436)
 	Fixed slapo-rwm REP_ENTRY flag handling (ITS#5340,ITS#6423)
 	Fixed slapo-syncprov memory leak (ITS#6459)
-	Fixed slapo-valsort REP_ENTRY flag handling (ITS#5340,ITS#6423)
+	Fixed slapo-valsort REP_ENTRY flag handling (ITS#5340,ITS#6423)	
+	Fixed contrib/sha2 adds mechs for more hashes (ITS#6433)
 	Documentation
 		admin24 avoid explicity moduleload statements (ITS#6486)
 
